--- a/Sentiment Analysis.ipynb
+++ b/Sentiment Analysis.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "After every survey we receive feedback form user in form of surveys and some plain text, Our actual CSAT score was incredibly strong, but their comments were being tagged as mixed sentiment. Digging into this discrepancy revealed that while folks were not happy with the support they received from agents.\n",
+    "After every survey we receive feedback from user in form of surveys and also plain text about the service, Our actual CSAT score can be quantitative, but their comments were being tagged as mixed sentiment. Digging into this discrepancy revealed that while folks were not happy with the support they received from agents.\n",
     "I have reviewed several model and available and tried to present  on which type of sentiment analysis can with ease to use and more flexible.\n"
    ]
   },
