--- a/Sentiment Analysis.ipynb
+++ b/Sentiment Analysis.ipynb
@@ -11,8 +11,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "After every survey we receive feedback from user in form of surveys and also plain text about the service, Our actual CSAT score can be quantitative, but their comments were being tagged as mixed sentiment. Digging into this discrepancy revealed that users were not happy with the support they received from agents.\n",
-    "I have reviewed several model and available and tried to present  on which type of sentiment analysis can with ease to use and more flexible.\n"
+    "After every survey we receive feedback from user in form of surveys and also plain text about the service, Our actual CSAT score can be quantitative, but their comments were being tagged as mixed sentiment. Digging into this discrepancy it revealed that users were not happy with the support they received from agents.\n",
+    "I have built few models to make decision on which type of model can be used with less effort and high accuracy.\n"
    ]
   },
   {
