Update Deep Learning Sentiment Classifier.ipynb

--- a/Deep Learning Sentiment Classifier.ipynb
+++ b/Deep Learning Sentiment Classifier.ipynb
@@ -234,7 +234,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will only consider rating 5 and rating 1, Value 5 is a postive and 1 as negative, this will help us seprate them with high degree polarity between negative and positive sentiments."
+    "We will only consider rating 5 and rating 1, Value 5 is a highly postive rating and 1 as a negative rating, this will help us seprate them with high degree of polarity between negative and positive sentiments."
    ]
   },
   {
